design: Window 컴포넌트 스타일 수정

--- a/app/components/Window.module.css
+++ b/app/components/Window.module.css
@@ -152,6 +152,14 @@
   text-align: center;
 }
 
+.profileImage {
+  width: 150px;
+  height: 150px;
+  object-fit: cover;
+  margin-bottom: 20px;
+  border-radius: 12px;
+}
+
 .profileContent h1 {
   font-size: 36px;
   font-weight: 600;
